@@ -78,7 +78,7 @@ csc=org.apache.tools.ant.taskdefs.optional.dotnet.CSharp
 ilasm=org.apache.tools.ant.taskdefs.optional.dotnet.Ilasm
 stylebook=org.apache.tools.ant.taskdefs.optional.StyleBook
 test=org.apache.tools.ant.taskdefs.optional.Test
-pvcs=org.apache.tools.ant.taskdefs.optional.Pvcs
+pvcs=org.apache.tools.ant.taskdefs.optional.pvcs.Pvcs
 p4change=org.apache.tools.ant.taskdefs.optional.perforce.P4Change
 p4label=org.apache.tools.ant.taskdefs.optional.perforce.P4Label
 p4have=org.apache.tools.ant.taskdefs.optional.perforce.P4Have
